# spring-boot-optimization

./: .gitignore  Gemfile  README.md  _config.yml  index.md
_demos/: demo-01-heap-sizing.md  demo-02-gc-monitoring.md  demo-03-appcds.md  demo-04-leyden.md  demo-05-grpc.md  demo-06-latency.md  demo-07-rightsizing.md  demo-08-panama.md  demo-09-onnx.md
_diagrams/: diagram-01.md  diagram-02.md  diagram-03.md  diagram-04.md  diagram-05.md  diagram-06.md  diagram-07.md  diagram-08.md  diagram-09.md  diagram-10.md  diagram-11.md  diagram-12.md
_layouts/: default.html  demo.html  diagram.html  reveal.html
demos/: index.md
diagrams/: 01-gc-hpa-thrash-cycle.excalidraw  02-jvm-memory-regions.excalidraw  03-aot-cache-progression.excalidraw  04-container-aware-jvm.excalidraw  05-spring-boot-leyden-flow.excalidraw  06-anti-patterns-vs-fixes.excalidraw  07-grpc-vs-rest-wire.excalidraw  08-spring-boot-startup-breakdown.excalidraw  09-observability-stack.excalidraw  10-panama-ffm-call-chain.excalidraw  11-g1gc-vs-zgc-pauses.excalidraw  12-cloud-native-lifecycle.excalidraw  build_diagrams.py  index.md
docs/: apply-to-your-app.md  demo-walkthrough.md  getting-started.md  index.md  jvm-cheatsheet.md  prerequisites.md  shenandoah-guide.md  spring-boot-reference.md
presentation/: PRESENTER-GUIDE.md  deck.js  index.html  java-openshift-optimization.pptx
spring-boot-demos/: DEMO-PREREQUISITES.md  JVM-OPTIMIZATION-CHEATSHEET.md  SHENANDOAH-GC-GUIDE.md  (+1 more)
spring-boot-demos/demo-08-panama/native/: CMakeLists.txt
spring-boot-demos/demo-08-panama/native/src/: jvmstats.cpp  jvmstats.h
(+78 files in other folders)
